--- a/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
+++ b/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
@@ -7,6 +7,8 @@
           <ul class="inner-sidebar-links" >
             <li class="active text-black" routerLink="/login">Login</li>
             <li class="text-black">Home</li>
+            <li class="text-black">Add Cell Members</li>
+            <li class="text-black">Add Clients</li>
           </ul>
         </div>
     </li>
@@ -23,9 +25,9 @@
         </a>
         <div id="tokens_sb_c" class="panel-collapse collapse-sidebar-links-inner in" style="background-color:#B6B6B4">
           <ul class="inner-sidebar-links">
-            <li class="active text-black" routerLink="/tickets">Login</li>
-            <li class="text-black">All Tickets</li>
-            <li class="text-black">Your Tickets</li>
+            <li class="active text-black" routerLink="/login">Login</li>
+            <li class="text-black" routerLink = "/alltickets">All Tickets</li>
+            <li class="text-black" routerLink = "/yourtickets">Your Tickets</li>
             <li class="text-black">Assigned Tickets</li>
             <li class="text-black">Categories</li>
           </ul>
