--- a/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
+++ b/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
@@ -7,7 +7,7 @@
           <ul class="inner-sidebar-links" >
             <li class="active text-black" routerLink="/login">Login</li>
             <li class="text-black">Home</li>
-            <li class="text-black">Add Cell Members</li>
+            <li class="text-black" routerLink="/admin/addmembers">Add Cell Members</li>
             <li class="text-black">Add Clients</li>
           </ul>
         </div>
