--- a/GrievanceRedressalSystem/src/app/login/login.component.html
+++ b/GrievanceRedressalSystem/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="isLoggedIn" class="card w-75 text-white bg-dark mb-3" >
   <div class="card-header"></div>
   <div class="card-body">
-    <h5 class="card-title">Login Successful</h5>
+    <h5 class="card-title text-center">Login Successful</h5>
   </div>
 </div>
 
