--- a/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
+++ b/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
@@ -5,8 +5,7 @@
         </a>
         <div id="admin_sb_c" class="panel-collapse collapse-sidebar-links-inner in" style="background-color:#B6B6B4">
           <ul class="inner-sidebar-links" >
-            <li class="active text-black" routerLink="/login">Login</li>
-            <li class="text-black">Home</li>
+            <li class="text-black" routerLink="/home">Home</li>
             <li class="text-black" routerLink="/admin/addmembers">Add Cell Members</li>
             <li class="text-black">Add Clients</li>
           </ul>
@@ -25,10 +24,9 @@
         </a>
         <div id="tokens_sb_c" class="panel-collapse collapse-sidebar-links-inner in" style="background-color:#B6B6B4">
           <ul class="inner-sidebar-links">
-            <li class="active text-black" routerLink = "/alltickets">All Tickets</li>
-            <li class="text-black" routerLink = "/yourtickets">Assigned Tickets</li>
-            <li class="text-black">Assigned Tickets</li>
-            <li class="text-black">Categories</li>
+            <li class="active text-black" routerLink = "/tickets/alltickets">All Tickets</li>
+            <li class="text-black" routerLink = "/tickets/yourtickets">Assigned Tickets</li>
+            <li class="text-black" routerLink = "/tickets/categories">Categories</li>
           </ul>
         </div>
     </li>
