--- a/GrievanceRedressalSystem/src/app/all-tickets/all-tickets.component.html
+++ b/GrievanceRedressalSystem/src/app/all-tickets/all-tickets.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="container">
+<div class="card" style="width:98%">
   <button class="btn btn-primary w-100" (click)="getAllTickets()">View All Tickets</button>
   <table class="table table-bordered table-striped">
     <thead>
@@ -9,6 +9,7 @@
         <th>Priority</th>
         <th>Status</th>
         <th>Category</th>
+        <th>Assigned To</th>
         <th>Last Reply</th>
         <th>Options</th>
       </tr>
@@ -21,6 +22,7 @@
         <td>{{ticket.priority}}</td>
         <td>{{ticket.status}}</td>
         <td>{{ticket.category}}</td>
+        <td>{{ticket.message}}</td>
         <td>{{ticket.assignedto}}</td>
         <td><button class="btn btn-success btn-sm" [routerLink]="['/ticketdetail', ticket.id]" (click)="getTicketById(ticket.id)">view</button></td>
       </tr>
