--- a/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
+++ b/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
@@ -1,12 +1,3 @@
-<!-- <br>
-<div class="card w-50" >
-  <div class="card-body">
-  </div>
-</div>
-<div class="card w-50">
-  <div class="card-body">
-  </div>
-</div> -->
 <br>
 
 <div class="row">
@@ -70,7 +61,7 @@
 
       <tr>
         <td>
-          Status
+          Status :
         </td>
         <td>
             <select class="dropdown-item bg-light dropdown-toggle w-100" name="status" [(ngModel)]="ticket.status">
@@ -83,11 +74,26 @@
 
       <tr>
         <td>
-          Assign
+          Assign To :
         </td>
         <td>
-            <select class="dropdown-item bg-light dropdown-toggle w-100" name="assign" [(ngModel)]="ticket.status">
-              <option class="w-100 dropdown-item" *ngFor="let member of cellMembers">{{member}}</option>
+            <select class="dropdown-item bg-light dropdown-toggle w-100" name="assign" [(ngModel)]="ticket.assignedto">
+              <option class="w-100 dropdown-item" *ngFor="let member of members" >{{member.name}}</option>
+            </select>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          Rating :
+        </td>
+        <td>
+            <select class="dropdown-item bg-light dropdown-toggle w-100" name="rating" [(ngModel)]="ticket.rating">
+              <option class="w-100 dropdown-item" >1</option>
+              <option class="w-100 dropdown-item" >2</option>
+              <option class="w-100 dropdown-item" >3</option>
+              <option class="w-100 dropdown-item" >4</option>
+              <option class="w-100 dropdown-item" >5</option>
             </select>
         </td>
       </tr>
