--- a/GrievanceRedressalSystem/src/app/admindashboard/admindashboard.component.html
+++ b/GrievanceRedressalSystem/src/app/admindashboard/admindashboard.component.html
@@ -1,16 +1,16 @@
 <br>
 <div class="row" >
   <div class="col col-sm-3 col-md-3 offset-md-0 col-lg-3">
-    <button class="btn btn-primary w-100" style="height:100px"><span class="h3">Total Tickets</span></button>
+    <button class="btn btn-primary w-100" style="height:100px"><span class="h3">{{totalTicketCount}} Total Tickets</span></button>
   </div>
   <div class="col col-sm-3 offset-md-0 col-md-3 col-lg-3 ">
-    <button class="text-lg btn w-100 btn-success" style="height:100px"><span class="h3">Assigned Tickets</span></button>
+    <button class="text-lg btn w-100 btn-success" style="height:100px"><span class="h3">{{assignedTicketCount}} Assigned Tickets</span></button>
   </div>
   <div class=" col-sm-3 offset-md-0 col-md-3 col-lg-3 ">
     <button class="btn  w-100 btn-danger" style="height:100px"><span class="h3">Tickets Today</span></button>
   </div>
   <div class=" col-sm-3 offset-md-0 col-md-3 col-lg-3 ">
-    <button class="btn btn-dark" style="height:100px;width:240px"><span class="h3">Closed Tickets</span></button>
+    <button class="btn btn-dark" style="height:100px;width:240px"><span class="h3">{{closedTicketCount}} Closed Tickets</span></button>
   </div>
 <div>
 <br>
