--- a/GrievanceRedressalSystem/src/app/login/login.component.html
+++ b/GrievanceRedressalSystem/src/app/login/login.component.html
@@ -6,30 +6,50 @@
   </div>
 </div>
 
-<div class="card w-75" *ngIf="!isLoggedIn">
-  <h5 class="text-center card-header ">Login and Registration Form</h5>
+<div *ngIf="isSignupSuccessful" class="card w-75 text-white bg-dark mb-3" >
+  <div class="card-header"></div>
+  <div class="card-body">
+    <h5 class="card-title text-center">Your Account is Successfully Created</h5>
+  </div>
+</div>
+
+<div class="card w-75" *ngIf="!isLoggedIn && haveAccount">
+  <h5 class="text-center card-header ">Login</h5>
 <form   #loginForm="ngForm" >
   <div class="form-group">
-    <label for="firstname">FirstName</label>
-    <input type="text" class="form-control" [(ngModel)]="name.firstname" name="firstname" placeholder="Enter your firstname" >
-  </div>
-  <div class="form-group">
-    <label for="lastname">LastName</label>
-    <input type="text" class="form-control" [(ngModel)]="name.lastname" name="lastname" placeholder="Enter your lastname">
-  </div>
-  <div class="form-group">
-    <label for="username"  >UserName</label>
+    <label for="username">UserName</label>
     <input type="text" class="form-control" [(ngModel)]="user.username" name="username" placeholder="Enter username"  required>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
     <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Enter your password"  required>
   </div>
-  <input type="submit" class="btn btn-primary btn-sm" (click)="onSubmit()">&nbsp;
-  <button class="btn btn-sm btn-primary" (click)="signup()">Sign Up </button>
+  <input type="submit" class="btn btn-primary  w-100" (click)="onSubmit()" value="Login"><br>
+  <br><a  (click)="negateHaveAccount()">I dont have an account</a>
+  <a  style="float:right" (click)="negateHaveAccount()">Forgot my password</a>
+  <br>
   <div class="text-danger" *ngIf="errMessLogin">{{errMessLogin}}</div>
   <div class="text-danger" *ngIf="errMessSignup">{{errMessSignup}}</div>
 </form>
+</div>
+
+<div class="card w-75" *ngIf="!haveAccount && !isSignupSuccessful">
+  <h5 class="text-center card-header ">Registration</h5>
+  <form   #loginForm="ngForm" >
+    <div class="form-group">
+      <label for="username">UserName</label>
+      <input type="text" class="form-control" [(ngModel)]="user.username" name="username" placeholder="Enter username"  required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Enter your password"  required>
+    </div>
+    <button class="btn btn-sm btn-primary w-100" (click)="signup()">Sign Up </button>
+    <br>
+    <br><a (click)="negateHaveAccount()" style="float:right">I already have an account</a>
+    <div class="text-danger" *ngIf="errMessLogin">{{errMessLogin}}</div>
+    <div class="text-danger" *ngIf="errMessSignup">{{errMessSignup}}</div>
+  </form>
 </div>
 
 
