--- a/GrievanceRedressalSystem/src/app/home/home.component.html
+++ b/GrievanceRedressalSystem/src/app/home/home.component.html
@@ -1,3 +1,45 @@
 <br>
-<p> This is home page </p>
-<button (click)="getCount()">Count</button>
+<header class="jumbotron" style="width:97%">
+    <div class="container" >
+        <div class="row row-header">
+            <div class="col-12 col-sm-6">
+                <h1>Con Fusion</h1>
+                <p>We take inspiration from the World's best homepages, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+            </div>
+            <div class="col-12 col-sm-3 align-self-center">
+               <img src="img/logo.png" class="img-fluid">
+           </div>
+           <div class="col-12 col-sm-3 align-self-center">
+             <span class="navbar-text">
+               <a id="openReserve"  class="btn bg-warning" >
+               Reserve a Table</a>
+           </span>
+           </div>
+        </div>
+    </div>
+</header>
+<br><br>
+<footer class="footer jumbotron" style="width:97%">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 offset-1 col-sm-2">
+                </div>
+                <div class="col-7 col-sm-5">
+                    <h5>Our Address</h5>
+                    <address>
+		              Somewhere on earth, We'll inform u later<br>
+		              <br>
+									<i class="fa fa-phone fa-lg"></i> : +91 9988776655<br>
+                      <i class="fa fa-fax fa-lg"></i> : +91 8877552233 <br>
+                      <i class="fa fa-envelope fa-lg"></i>:
+                      <a href="mailto:confusion@food.net"> noreply@confusion.com</a>
+									</address>
+                </div>
+           </div>
+            <div  class="row justify-content-center" >
+                <div class="col-auto">
+                    <p>© Copyright 2020 Con Fusion</p>
+                </div>
+           </div>
+        </div>
+    </footer>
