--- a/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
+++ b/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
@@ -6,8 +6,9 @@
         <div id="admin_sb_c" class="panel-collapse collapse-sidebar-links-inner in" style="background-color:#B6B6B4">
           <ul class="inner-sidebar-links" >
             <li class="text-black" routerLink="/home">Home</li>
-            <li class="text-black" routerLink="/admin/addmembers">Add Cell Members</li>
-            <li class="text-black">Add Clients</li>
+            <li class="text-black" routerLink="/admin/addmembers">Manage Cell Members</li>
+            <li class="text-black" routerLink="/admin/addclients">Manage Clients</li>
+            <li class="text-black" routerLink = "/tickets/categories">Manage Categories</li>
           </ul>
         </div>
     </li>
@@ -26,7 +27,6 @@
           <ul class="inner-sidebar-links">
             <li class="active text-black" routerLink = "/tickets/alltickets">All Tickets</li>
             <li class="text-black" routerLink = "/tickets/yourtickets">Assigned Tickets</li>
-            <li class="text-black" routerLink = "/tickets/categories">Categories</li>
           </ul>
         </div>
     </li>
