--- a/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
+++ b/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
@@ -32,7 +32,7 @@
       </tr>
       <tr>
         <td>Username : </td>
-        <td>{{ticket.firstname}}</td>
+        <td>{{ticket.lastname}}</td>
       </tr>
       <tr>
         <td>Created: </td>
