--- a/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
+++ b/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
@@ -97,7 +97,7 @@
             </select>
         </td>
       </tr>
-
+        <button class="btn btn-primary" (click)="reply()">Update Ticket</button>
     </table>
 
   </div>
