--- a/GrievanceRedressalSystem/src/app/categories/categories.component.html
+++ b/GrievanceRedressalSystem/src/app/categories/categories.component.html
@@ -18,6 +18,9 @@
         <div class="col">
           <input type="text" class="form-control" placeholder='{{cat.head}}' name="head" disabled>
         </div>
+        <div class="col">
+          <button class="btn btn-danger w-75 text-center">Delete Category</button>
+        </div>
         <br><br>
       </div><br>
     </form>
