--- a/GrievanceRedressalSystem/src/app/home/home.component.html
+++ b/GrievanceRedressalSystem/src/app/home/home.component.html
@@ -18,6 +18,36 @@
         </div>
     </div>
 </header>
+
+<div class="container">
+<div class="row" style="height:100px">
+  <div class="col-md-3 card" >
+    <div class="card-header text-center">
+      Admin
+    </div>
+    <div class="card-body text-center">
+      admin@gmail.com
+    </div>
+  </div>
+  <div class="offset-md-1 col-md-3 card">
+    <div class="card-header text-center">
+      Principal
+    </div>
+    <div class="card-body text-center">
+      principal@gmail.com
+    </div>
+  </div>
+  <div class="offset-md-1 col-md-3 card">
+    <div class="card-header text-center">
+      CEO
+    </div>
+    <div class="card-body text-center">
+      ceo@gmail.com
+    </div>
+  </div>
+</div>
+</div>
+
 <br><br>
 <footer class="footer jumbotron" style="width:97%">
         <div class="container">
