--- a/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
+++ b/GrievanceRedressalSystem/src/app/navigation-bar/navigation-bar.component.html
@@ -38,8 +38,7 @@
         <div id="reports_sb_c" class="panel-collapse collapse-sidebar-links-inner in" style="background-color:#B6B6B4">
           <ul class="inner-sidebar-links" >
             <li class="text-black">Ticket Report</li>
-            <li class="text-black">Rated Tickets</li>
-            <li class="text-black">User Ratings</li>
+            <li class="text-black" routerLink="/reports/ratedtickets">Rated Tickets</li>
           </ul>
         </div>
     </li>
