--- a/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
+++ b/GrievanceRedressalSystem/src/app/ticket-detail/ticket-detail.component.html
@@ -36,11 +36,11 @@
       </tr>
       <tr>
         <td>Created: </td>
-        <td>{{ticket.createdat}}</td>
+        <td>{{ticket.createdat | date}}</td>
       </tr>
       <tr>
         <td>Last Updated : </td>
-        <td>{{ticket.lastupdatedat}}</td>
+        <td>{{ticket.lastupdatedat | date}}</td>
       </tr>
       <tr>
         <td>Assigned User : </td>
